# diskhasher

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  common.h  cxxopts.hpp  diskhasher.cpp  execute-hbb-build.sh  hash.cpp  hashclass.h  kcapi-md.c  md5.h  sha1.c  sha1.h
cpp/: CMakeLists.txt  Makefile  compile-inside-hbb.sh  diskhasher.cpp  dkhash.cpp  execute-hbb-build.sh  filehash.cpp  hash.cpp  hash.h  hashclass.cpp  hbb-cmake-build.sh  internal.h  kcapi-kernel-if.c  kcapi-utils.c  md5.c  run-cmake-hbb.sh  sha1.c  sha256.c  sha256.h  sha512.c  winbuild.bat
cpp/include/: atomic.h  byteread.h  common.h  cryptouser.h  filehash.h  hash.h  indicators.hpp  kcapi.h  sha256.h  sha512.h
rs/: Cargo.toml  compile-inside-hbb.sh  rustfmt.toml
rs/.cargo/: config.toml
rs/src/: cli.rs  constants.rs  enums.rs  error.rs  filedata.rs  filesigner.rs  hashdb.rs  hasher.rs  lib.rs  macros.rs  main.rs  test.rs  threadfunc.rs  util.rs
rs/src/test/: mod.rs
rs/temp_test_dir_filtering/: .hidden_file.txt  output.hashes
rs/temp_test_dir_filtering/subdir1/: .hidden_file2.txt
