#
# DISKHASHER v0.3 - 2023 by Hyohko

# ##################################
# GPLv3 NOTICE AND DISCLAIMER
# ##################################

# This file is part of DISKHASHER.

# DISKHASHER is free software: you can redistribute it
# and/or modify it under the terms of the GNU General
# Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at
# your option) any later version.

# DISKHASHER is distributed in the hope that it will
# be useful, but WITHOUT ANY WARRANTY; without even
# the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public
# License for more details.

# You should have received a copy of the GNU General
# Public License along with DISKHASHER. If not, see
# <https://www.gnu.org/licenses/>.
#

[package]
name = "dkhash"
description = """Recursive directory file hasher - \
computes cryptographic checksums for every \
file in a directory. Supports a variety of hash algorithms, \
see --help for details"""
authors = ["Hyohko"]
version = "0.4.0"
edition = "2021"
license = "GPLv3"
repository = "https://github.com/Hyohko/diskhasher"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3 # "s" binary size, omit for speed

[dependencies]
aligned_box = "^0.2"
clap = { version = "^4", features = ["cargo", "wrap_help"] }
custom_error = "^1.9"
digest = "^0.10"
hex = "^0.4"
indicatif = "^0.17"
#lazy_static = "^1.4"
log = "^0.4"
md-5 = "^0.10"
pretty_env_logger = "^0.4"
regex = "^1"
sha1 = "^0.10"
sha2 = "^0.10"
sha3 = "^0.10"
threadpool = "^1.8"
typenum = "^1"
walkdir = "^2"