#
# DKHASH - 2023 by Hyohko

# ##################################
# GPLv3 NOTICE AND DISCLAIMER
# ##################################

# This file is part of DKHASH.

# DKHASH is free software: you can redistribute it
# and/or modify it under the terms of the GNU General
# Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at
# your option) any later version.

# DKHASH is distributed in the hope that it will
# be useful, but WITHOUT ANY WARRANTY; without even
# the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public
# License for more details.

# You should have received a copy of the GNU General
# Public License along with DKHASH. If not, see
# <https://www.gnu.org/licenses/>.
#

[package]
name = "dkhash"
description = """Recursive directory file hasher - \
computes cryptographic checksums for every \
file in a directory. Supports a variety of hash algorithms, \
also has functionality for digitally signing hash files and \
validating digital signatures using Ed22519 for greater \
confidence in file integrity."""
authors = ["Hyohko"]
version = "0.5.3"
edition = "2024"
license = "GPLv3"
repository = "https://github.com/Hyohko/diskhasher"
readme = "../README.md"
keywords = [
    "md5",
    "sha1",
    "sha2",
    "sha3",
    "cli",
    "ed22519",
    "hashing",
    "crypto",
]
categories = ["file-integrity", "command-line", "system-utility"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3     # "s" binary size, omit for speed

[dependencies]
aligned_box = "0.3.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["cargo", "wrap_help"] }
cpu-endian = "0.1.1"
custom_error = "1.9"
digest = "0.10.7"
hex = "0.4.3"
indicatif = "0.17.11"
#lazy_static = "^1.4"
log = "0.4.26"
md-5 = "0.10.6"
minisign = "0.7.9"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
regex = "1.11"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
threadpool = "1.8"
typenum = "1.18"
walkdir = "2.5"
